update docker and requirements

--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,8 @@ vis/
 model_zoo/
 model_zoo_old/
 scripts/
+
+COCODIR/
+models/dab_deformable_detr/ops/build/
+models/dab_deformable_detr/ops/dist/
+models/dab_deformable_detr/ops/MultiScaleDeformableAttention.egg-info/
